--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
   "main": "expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web"
+
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.2.1",
@@ -24,3 +28,5 @@
   },
   "private": true
 }
+
+
