--- a/package.json
+++ b/package.json
@@ -4,11 +4,9 @@
   "main": "expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "build": "npm run build",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web"
-
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.2.1",
@@ -22,9 +20,13 @@
     "react-native-web": "~0.19.10"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@tsconfig/react-native": "^3.0.5",
+    "@types/jest": "^29.5.12",
+    "@types/react": "^18.3.4",
+    "@types/react-test-renderer": "^18.3.0",
+    "babel-plugin-module-resolver": "^5.0.2",
+    "typescript": "^5.5.4"
   },
   "private": true
 }
-
-
